Fixes long song titles overflow.

--- a/public/sass/components/components.song-list-item.scss
+++ b/public/sass/components/components.song-list-item.scss
@@ -21,6 +21,7 @@
   }
 
   &__title {
+    height: 100%;
     text-decoration: none;
     color: var(--color-text-primary);
     overflow: hidden;
